--- a/coming-soon.html
+++ b/coming-soon.html
@@ -24,7 +24,7 @@
     <div class="col-lg order-lg-2"> ... </div>
       1 of 3: About WordCamp
     <h3 class="mb-4">About WordCamp</h3>
-		<img src="san antonio.jpg" alt="Photo of San Antonio, TX"><img class="img-fluid" src="..."><img class="img-fluid rounded" src="..."><img>
+		<img src="san antonio.jpg" alt="Photo of San Antonio, TX"><img class="img-fluid" src="..." alt="..."><img class="img-fluid rounded" src="..." alt="...">
 <p>The beautiful city of San Antonio, TX will be the host city for WordCamp!</p>
 <p>Explore the future of WordPress with a lineup of industry professionals. Discover new techniques to advance your career as a web designer.</p></div>
    
