--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 	  <!-- navbar -->
-	  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
   <div class="container">
     <a class="navbar-brand order-1 mr-0" href="#" target="_blank">Presented by NVC</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,16 +33,17 @@
 	</div>
 </nav>
 <!-- /navbar -->
+	  
 	 <div class="p-3 mb-2 bg-primary text-white"></div><div class="p-3 mb-2 bg-primary-subtle text-primary-emphasis">
     <div class="container"><div class="container text-center"><h1 class="display-1">WordCamp San Antonio</h1>
  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script><p class="text-primary"></p>
     <!-- Content here -->A One-Day Conference About WordPress
-		<div class="col-lg-6 mx-auto"><div class="mx-auto p-2" style="width: 200px;">
-			<p><button type="button" class="btn btn-primary btn-lg">Register Now</button><button type="button" class="btn btn-primary btn-lg">See Speakers</button></p>
-			</div></div></div></div>
+		<div class="mt-5">
+  <button type="button" class="btn btn-secondary btn-lg">Register Now</button>
+  <a class="btn btn-light btn-lg" href="#speakers">See Speakers</a>
+</div>
 </div><div class="p-3 mb-2 bg-primary text-white"></div>
 	  
-  </body>
 
     <!-- Optional JavaScript --><div class="container pt-4">
   <!-- about -->
@@ -106,6 +107,26 @@
 </div>
 <hr>
 <!-- /signup form -->
+	<!-- footer -->
+  <div class="row py-3">
+    <div class="col-md-7">
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Community</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Tracks</a>
+        </li>
+        <li class="nav-item">
+          [Dropdown here]
+        </li>
+      </ul>
+    </div>
+    <div class="col-md text-md-right">
+      <small>&copy; 2019 WordCamp &amp; Northwest Vista College</small>
+    </div>
+  </div>
+<!-- /footer -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
