--- a/index.html
+++ b/index.html
@@ -79,7 +79,23 @@
 <!-- speakers -->
 	<div class="col-lg"><h1 class="display-4 text-center my-5 text-muted">Speakers</h1>
 
-[Speakers bios go here]
+<!-- speakers -->
+<h2 id="speakers" class="display-4 text-center my-5 text-muted">Speakers</h2>
+<div class="row">
+  <div class="col-md-6">
+  </div>
+  <div class="col-md-6">
+  </div>
+  <div class="col-md-6">
+  </div>
+  <div class="col-md-6">
+  </div>
+  <div class="col-md-6">
+  </div>
+  <div class="col-md-6">
+  </div>
+</div>
+<!-- /speakers -->
 		</div>
 <!-- /speakers -->
 
@@ -117,9 +133,16 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Tracks</a>
         </li>
-        <li class="nav-item">
-          [Dropdown here]
-        </li>
+        <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Other Conferences
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="#">Action</a>
+    <a class="dropdown-item" href="#">Another action</a>
+    <a class="dropdown-item" href="#">Other</a>
+  </div>
+</div>
       </ul>
     </div>
     <div class="col-md text-md-right">
