--- a/index.html
+++ b/index.html
@@ -65,43 +65,166 @@
 <div class="col-lg order-3"> ... </div>
       3 of 3: Topics
     <h3 class="mb-4">What You'll Learn</h3>
-<ul>
-  <li><strong>WordPress 5</strong>: New Gutenberg editor</li>
-  <li><strong>WooCommerce</strong>: E-commerce platform</li>
-  <li><strong>Hosting</strong>: Managed web hosting</li>
-  <li><strong>Themes</strong>: Creating your theme</li>
-  <li><strong>Plugins</strong>: Develop your plugin</li>
-  <li><strong>Content</strong>: Writing and podcasts</li>
-</ul>
+<div class="list-group">
+  <a href="#" class="list-group-item list-group-item-action"><strong>WordPress 5</strong>: New Gutenberg editor</a>
+  <a href="#" class="list-group-item list-group-item-action"><strong>WooCommerce</strong>: E-commerce platform</a>
+  <a href="#" class="list-group-item list-group-item-action"><strong>Hosting</strong>: Managed web hosting</a>
+  <a href="#" class="list-group-item list-group-item-action"><strong>Themes</strong>: Creating your theme</a>
+  <a href="#" class="list-group-item list-group-item-action"><strong>Plugins</strong>: Develop your plugin</a>
+  <a href="#" class="list-group-item list-group-item-action"><strong>Content</strong>: Writing and podcasts</a>
+</div>
 	
-  <!-- /about -->
-	
-<!-- speakers -->
-	<div class="col-lg"><h1 class="display-4 text-center my-5 text-muted">Speakers</h1>
-
-<!-- speakers -->
+  <!-- /about --><!-- speakers -->
 <h2 id="speakers" class="display-4 text-center my-5 text-muted">Speakers</h2>
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-6 col-lg-4">
+<div class="card mb-3">
+  <img class="card-img-top" src="https://via.placeholder.com/800x450.png" alt="Speaker Name">
+  <div class="card-body">
+    <h4 class="card-title">Speaker Name</h4>
+    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
   </div>
-  <div class="col-md-6">
+</div>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-6 col-lg-4">
+<div class="card mb-3">
+  <img class="card-img-top" src="https://via.placeholder.com/800x450.png" alt="Speaker Name">
+  <div class="card-body">
+    <h4 class="card-title">Speaker Name</h4>
+    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
   </div>
-  <div class="col-md-6">
+</div>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-6 col-lg-4">
+<div class="card mb-3">
+  <img class="card-img-top" src="https://via.placeholder.com/800x450.png" alt="Speaker Name">
+  <div class="card-body">
+    <h4 class="card-title">Speaker Name</h4>
+    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
   </div>
-  <div class="col-md-6">
+</div>
+  </div>
+  <div class="col-md-6 col-lg-4">
+<div class="card mb-3">
+  <img class="card-img-top" src="https://via.placeholder.com/800x450.png" alt="Speaker Name">
+  <div class="card-body">
+    <h4 class="card-title">Speaker Name</h4>
+    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
+  </div>
+</div>
+  </div>
+  <div class="col-md-6 col-lg-4">
+<div class="card mb-3">
+  <img class="card-img-top" src="https://via.placeholder.com/800x450.png" alt="Speaker Name">
+  <div class="card-body">
+    <h4 class="card-title">Speaker Name</h4>
+    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
+  </div>
+</div>
+  </div>
+  <div class="col-md-6 col-lg-4">
+<div class="card mb-3">
+  <img class="card-img-top" src="https://via.placeholder.com/800x450.png" alt="Speaker Name">
+  <div class="card-body">
+    <h4 class="card-title">Speaker Name</h4>
+    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
+  </div>
+</div>
   </div>
 </div>
 <!-- /speakers -->
-		</div>
+	
+<!-- speakers -->
+	
 <!-- /speakers -->
 
 <!-- schedule -->
-<div class="col-lg"><h1 class="display-4 text-center my-5 text-muted">Schedule</h1>
-	
+<h2 id="schedule" class="display-4 text-center my-5 text-muted">Schedule</h2>
+<ul class="list-group">
+  <li class="list-group-item">
+    <div class="d-flex justify-content-between">
+      <h5 class="mb-1">Keynote: WordPress 5.0</h5>
+      <span class="badge badge-pill badge-secondary p-2">9:00am</span>
+    </div>
+    <p class="mb-1">Speaker Name</p>
+  </li>
+</ul>
+		<ul class="list-group">
+  <li class="list-group-item">
+    <div class="d-flex justify-content-between">
+      <h5 class="mb-1">Keynote: WordPress 5.0</h5>
+      <span class="badge badge-pill badge-secondary p-2">9:00am</span>
+    </div>
+    <p class="mb-1">Speaker Name</p>
+  </li>
+</ul>
+		<ul class="list-group">
+  <li class="list-group-item">
+    <div class="d-flex justify-content-between">
+      <h5 class="mb-1">Keynote: WordPress 5.0</h5>
+      <span class="badge badge-pill badge-secondary p-2">9:00am</span>
+    </div>
+    <p class="mb-1">Speaker Name</p>
+  </li>
+</ul>
+		<ul class="list-group">
+  <li class="list-group-item">
+    <div class="d-flex justify-content-between">
+      <h5 class="mb-1">Keynote: WordPress 5.0</h5>
+      <span class="badge badge-pill badge-secondary p-2">9:00am</span>
+    </div>
+    <p class="mb-1">Speaker Name</p>
+  </li>
+</ul>
+		<ul class="list-group">
+  <li class="list-group-item">
+    <div class="d-flex justify-content-between">
+      <h5 class="mb-1">Keynote: WordPress 5.0</h5>
+      <span class="badge badge-pill badge-secondary p-2">9:00am</span>
+    </div>
+    <p class="mb-1">Speaker Name</p>
+  </li>
+</ul>
+		<ul class="list-group">
+  <li class="list-group-item">
+    <div class="d-flex justify-content-between">
+      <h5 class="mb-1">Keynote: WordPress 5.0</h5>
+      <span class="badge badge-pill badge-secondary p-2">9:00am</span>
+    </div>
+    <p class="mb-1">Speaker Name</p>
+  </li>
+</ul>
+		<ul class="list-group">
+  <li class="list-group-item">
+    <div class="d-flex justify-content-between">
+      <h5 class="mb-1">Keynote: WordPress 5.0</h5>
+      <span class="badge badge-pill badge-secondary p-2">9:00am</span>
+    </div>
+    <p class="mb-1">Speaker Name</p>
+  </li>
+</ul>
+		<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Register for WordCamp Conference
+		 </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- /schedule -->
 [Conference schedule goes here]
 <!-- /speakers -->
 <!-- signup form -->
@@ -135,7 +258,7 @@
         </li>
         <div class="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Other Conferences
+    Other Conference
   </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
     <a class="dropdown-item" href="#">Action</a>
