--- a/index.html
+++ b/index.html
@@ -203,14 +203,14 @@
     <p class="mb-1">Speaker Name</p>
   </li>
 </ul>
-		<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- /speakers -->
+<!-- Modal -->
+<div class="modal fade" id="register" tabindex="-1" role="dialog" aria-labelledby="register" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Register for WordCamp Conference
-		 </h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <h5 class="modal-title" id="register">Register for WordCamp Conference</h5>
+        <button type="button" class="close" data-toggle="modal" data-target="#register" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -218,15 +218,13 @@
         ...
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#register">Close</button>
         <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
 </div>
-<!-- /schedule -->
-[Conference schedule goes here]
-<!-- /speakers -->
+		
 <!-- signup form -->
 <hr>
 <div class="row py-4 text-muted">
@@ -245,6 +243,26 @@
   </div>
 </div>
 <hr>
+		<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 <!-- /signup form -->
 	<!-- footer -->
   <div class="row py-3">
