--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
         ...
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#register">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#register">Don't Miss Out, Register Now</button>
+        <button type="button" class="btn btn-primary">Register Now</button>
       </div>
     </div>
   </div>
