--- a/index.html
+++ b/index.html
@@ -204,13 +204,18 @@
   </li>
 </ul>
 <!-- /speakers -->
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#register">
+  Don't Miss Out, Register Now
+</button>
+
 <!-- Modal -->
-<div class="modal fade" id="register" tabindex="-1" role="dialog" aria-labelledby="register" aria-hidden="true">
+<div class="modal fade" id="register" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="register">Register for WordCamp Conference</h5>
-        <button type="button" class="close" data-toggle="modal" data-target="#register" aria-label="Close">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -218,13 +223,12 @@
         ...
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#register">Don't Miss Out, Register Now</button>
-        <button type="button" class="btn btn-primary">Register Now</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
 </div>
-		
 <!-- signup form -->
 <hr>
 <div class="row py-4 text-muted">
