--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script><p class="text-primary"></p>
     <!-- Content here -->A One-Day Conference About WordPress
 		<div class="mt-5">
-  <button type="button" class="btn btn-secondary btn-lg">Register Now</button>
+  <data-toggle="modal" data-target="#register" button type="button" class="btn btn-secondary btn-lg">Register Now</button>
   <a class="btn btn-light btn-lg" href="#speakers">See Speakers</a>
 </div>
 </div><div class="p-3 mb-2 bg-primary text-white"></div>
