--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script><p class="text-primary"></p>
     <!-- Content here -->A One-Day Conference About WordPress
 		<div class="mt-5">
-  <data-toggle="modal" data-target="#register" button type="button" class="btn btn-secondary btn-lg">Register Now</button>
+  <button type="button" class="btn btn-secondary btn-lg">Register Now</button>
   <a class="btn btn-light btn-lg" href="#speakers">See Speakers</a>
 </div>
 </div><div class="p-3 mb-2 bg-primary text-white"></div>
@@ -81,7 +81,7 @@
 <div class="card mb-3">
   <img class="card-img-top" src="https://via.placeholder.com/800x450.png" alt="Speaker Name">
   <div class="card-body">
-    <h4 class="card-title">Speaker Name</h4>
+    <h4 class="card-title">Holly Golightly</h4>
     <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
   </div>
 </div>
@@ -90,7 +90,7 @@
 <div class="card mb-3">
   <img class="card-img-top" src="https://via.placeholder.com/800x450.png" alt="Speaker Name">
   <div class="card-body">
-    <h4 class="card-title">Speaker Name</h4>
+    <h4 class="card-title">Count Dracula</h4>
     <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
   </div>
 </div>
@@ -99,7 +99,7 @@
 <div class="card mb-3">
   <img class="card-img-top" src="https://via.placeholder.com/800x450.png" alt="Speaker Name">
   <div class="card-body">
-    <h4 class="card-title">Speaker Name</h4>
+    <h4 class="card-title">Sherlock Holmes</h4>
     <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
   </div>
 </div>
@@ -108,7 +108,7 @@
 <div class="card mb-3">
   <img class="card-img-top" src="https://via.placeholder.com/800x450.png" alt="Speaker Name">
   <div class="card-body">
-    <h4 class="card-title">Speaker Name</h4>
+    <h4 class="card-title">John H. Watson</h4>
     <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
   </div>
 </div>
@@ -117,7 +117,7 @@
 <div class="card mb-3">
   <img class="card-img-top" src="https://via.placeholder.com/800x450.png" alt="Speaker Name">
   <div class="card-body">
-    <h4 class="card-title">Speaker Name</h4>
+    <h4 class="card-title">Bruce Wayne</h4>
     <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
   </div>
 </div>
@@ -126,7 +126,7 @@
 <div class="card mb-3">
   <img class="card-img-top" src="https://via.placeholder.com/800x450.png" alt="Speaker Name">
   <div class="card-body">
-    <h4 class="card-title">Speaker Name</h4>
+    <h4 class="card-title">Nancy Drew</h4>
     <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
   </div>
 </div>
@@ -152,7 +152,7 @@
 		<ul class="list-group">
   <li class="list-group-item">
     <div class="d-flex justify-content-between">
-      <h5 class="mb-1">Keynote: WordPress 5.0</h5>
+      <h5 class="mb-1">WooCommerce Basics</h5>
       <span class="badge badge-pill badge-secondary p-2">9:00am</span>
     </div>
     <p class="mb-1">Speaker Name</p>
@@ -161,7 +161,7 @@
 		<ul class="list-group">
   <li class="list-group-item">
     <div class="d-flex justify-content-between">
-      <h5 class="mb-1">Keynote: WordPress 5.0</h5>
+      <h5 class="mb-1">WPEngine and Flywheel</h5>
       <span class="badge badge-pill badge-secondary p-2">9:00am</span>
     </div>
     <p class="mb-1">Speaker Name</p>
@@ -170,7 +170,16 @@
 		<ul class="list-group">
   <li class="list-group-item">
     <div class="d-flex justify-content-between">
-      <h5 class="mb-1">Keynote: WordPress 5.0</h5>
+      <h5 class="mb-1">Lunch</h5>
+      <span class="badge badge-pill badge-secondary p-2">9:00am</span>
+    </div>
+    <p class="mb-1">Free pizza for everyone!</p>
+  </li>
+</ul>
+		<ul class="list-group">
+  <li class="list-group-item">
+    <div class="d-flex justify-content-between">
+      <h5 class="mb-1">Creating your Theme</h5>
       <span class="badge badge-pill badge-secondary p-2">9:00am</span>
     </div>
     <p class="mb-1">Speaker Name</p>
@@ -179,7 +188,7 @@
 		<ul class="list-group">
   <li class="list-group-item">
     <div class="d-flex justify-content-between">
-      <h5 class="mb-1">Keynote: WordPress 5.0</h5>
+      <h5 class="mb-1">Developing a Plugin</h5>
       <span class="badge badge-pill badge-secondary p-2">9:00am</span>
     </div>
     <p class="mb-1">Speaker Name</p>
@@ -188,16 +197,7 @@
 		<ul class="list-group">
   <li class="list-group-item">
     <div class="d-flex justify-content-between">
-      <h5 class="mb-1">Keynote: WordPress 5.0</h5>
-      <span class="badge badge-pill badge-secondary p-2">9:00am</span>
-    </div>
-    <p class="mb-1">Speaker Name</p>
-  </li>
-</ul>
-		<ul class="list-group">
-  <li class="list-group-item">
-    <div class="d-flex justify-content-between">
-      <h5 class="mb-1">Keynote: WordPress 5.0</h5>
+      <h5 class="mb-1">Creating great Content and Podcasts</h5>
       <span class="badge badge-pill badge-secondary p-2">9:00am</span>
     </div>
     <p class="mb-1">Speaker Name</p>
@@ -210,11 +210,11 @@
 </button>
 
 <!-- Modal -->
-<div class="modal fade" id="register" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="#register" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="register">Register for WordCamp Conference</h5>
+        <h5 class="modal-title" id="#register">Register for WordCamp Conference</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -300,5 +300,5 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	<body></body>
-</div></html>
+		</div></div></html>
 
