--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <p class="mb-1">Speaker Name</p>
   </li>
 </ul>
-		<ul class="list-group">
+  <ul class="list-group">
   <li class="list-group-item">
     <div class="d-flex justify-content-between">
       <h5 class="mb-1">Lunch</h5>
@@ -185,7 +185,7 @@
     <p class="mb-1">Speaker Name</p>
   </li>
 </ul>
-		<ul class="list-group">
+  <ul class="list-group">
   <li class="list-group-item">
     <div class="d-flex justify-content-between">
       <h5 class="mb-1">Developing a Plugin</h5>
@@ -206,12 +206,11 @@
 <!-- /speakers -->
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#register">
-  Don't Miss Out, Register Now
-</button>
+<strong> Don't</strong> <strong>Miss</strong> <strong>Out</strong>, <strong>Register</strong> <strong>Now</strong></button>
 
 <!-- Modal -->
-<div class="modal fade" id="register" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
+<div class="modal fade" id="register" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="register">Register for WordCamp Conference</h5>
