--- a/index.html
+++ b/index.html
@@ -213,13 +213,23 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="register">Register for WordCamp Conference</h5>
+        <h5 class="modal-title" id="#register">Register for WordCamp Conference</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
         ...
+		  <form>
+  <div class="form-group">
+    <label for="formGroupExampleInput">Name:</label>
+    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Name">
+  </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput2">Email:</label>
+    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Email">
+  </div>
+</form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
