--- a/index.html
+++ b/index.html
@@ -219,19 +219,28 @@
         </button>
       </div>
       <div class="modal-body">
-        ...
-		  <form>
-  <div class="form-group">
+        <p><strong>Hurry!</strong> Registration ends in two days.</p>
+		  <strong>Basic Info</strong>
+		  <div class="form-group">
     <label for="formGroupExampleInput">Name:</label>
     <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Name">
   </div>
-  <div class="form-group">
+		<div class="form-group">
     <label for="formGroupExampleInput2">Email:</label>
     <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Email">
   </div>
-</form>
+		<div form class="form-inline">
+  <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Job Role:</label>
+  <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+    <option selected>WorldPress Designer</option>
+    <option value="1">Web Developer</option>
+    <option value="2">Digital Media</option>
+    <option value="3">UI/UX Designer</option>
+  </select>  
+		  </div>
+		  ...
       </div>
-      <div class="modal-footer">
+		<div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary">Save changes</button>
       </div>
