--- a/index.html
+++ b/index.html
@@ -238,6 +238,19 @@
     <option value="3">UI/UX Designer</option>
   </select>  
 		  </div>
+		  <strong>Which Topic Interest You Most? </strong>
+		  <div class="custom-control custom-checkbox">
+  <input type="checkbox" class="custom-control-input" id="customCheck1">
+  <label class="custom-control-label" for="customCheck1">WordPress Plugins</label>
+</div>
+<div class="custom-control custom-checkbox">
+  <input type="checkbox" class="custom-control-input" id="customCheck2">
+  <label class="custom-control-label" for="customCheck1">PHP</label>
+</div>	
+<div class="custom-control custom-checkbox">
+  <input type="checkbox" class="custom-control-input" id="customCheck3">
+  <label class="custom-control-label" for="customCheck1">CSS and Javascript</label>
+</div>		  
 		  ...
       </div>
 		<div class="modal-footer">
