--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
         </button>
       </div>
       <div class="modal-body">
-        <p><strong>Hurry!</strong> Registration ends in two days.</p>
+        <p><strong>Hurry!</strong> </p><div class="alert alert-primary" role="alert">Registration ends in two days.
+</div>
 		  <strong>Basic Info</strong>
 		  <div class="form-group">
     <label for="formGroupExampleInput">Name:</label>
@@ -238,7 +239,7 @@
     <option value="3">UI/UX Designer</option>
   </select>  
 		  </div>
-		  <strong>Which Topic Interest You Most? </strong>
+		  <strong>Which Topic Interest You Most?</strong>
 		  <div class="custom-control custom-checkbox">
   <input type="checkbox" class="custom-control-input" id="customCheck1">
   <label class="custom-control-label" for="customCheck1">WordPress Plugins</label>
@@ -251,11 +252,39 @@
   <input type="checkbox" class="custom-control-input" id="customCheck3">
   <label class="custom-control-label" for="customCheck1">CSS and Javascript</label>
 </div>		  
+	<strong>Payment Info</strong>
+		  <div class="form-row">
+    <div class="col-7">
+      <input type="text" class="form-control" placeholder="Card Number">
+</div>
+    </div>
+    <div class="col">
+      <input type="text" class="form-control" placeholder="Zip Code">
+    </div>
+    <div class="col">
+      <input type="text" class="form-control" placeholder="CVV">
+    </div>
+			<form class="form-inline">
+  <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Expiration Date:</label>
+  <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+    <option selected>1-January</option>
+    <option value="1">2-Febuary</option>
+    <option value="2">3-March</option>
+    <option value="3">4-April</option>
+  </select>  
+    <form class="form-inline">
+  <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Year</label>
+  <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+    <option selected>2019</option>
+    <option value="1">2020</option>
+    <option value="2">2021</option>
+    <option value="3">2022</option>
+  </select>		  
+	</div>
 		  ...
       </div>
 		<div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+       <button type="button" class="btn btn-primary">Register</button>
       </div>
     </div>
   </div>
